fix: 特殊处理 z-index

--- a/src/components/item/ItemList.module.scss
+++ b/src/components/item/ItemList.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   border: 1px solid red;
   background: var(--overlay-mask-bg);
+  z-index: 64; // 特殊处理
 
   &_inner {
     background: var(--bg);
